# recipe-app

./: .gitignore  Procfile  README.md  main.py  pyproject.toml
src/: Procfile  manage.py  requirements.txt
src/recipe/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
src/recipe/migrations/: 0001_initial.py  0002_alter_recipe_cooking_time_alter_recipe_difficulty_and_more.py  0003_rename_description_recipe_method.py  0004_alter_recipe_difficulty.py  0005_alter_recipe_difficulty.py  0006_recipe_pic_alter_recipe_likes_alter_recipe_method.py  0007_remove_recipe_likes_recipe_liked_by_alter_recipe_pic.py  0008_recipe_created_at.py  0009_alter_recipe_method_alter_recipe_pic.py
src/recipe/static/recipes/css/: style.css
src/recipe/templates/auth/: login.html  signup.html
src/recipe/templates/recipe/: base.html  homepage.html  recipe_add.html  recipe_details.html  recipes.html  recipes_home.html  recipes_search.html
src/recipesApp/: asgi.py  settings.py  urls.py  wsgi.py
