[project]
name = "recipes-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2>=2.9.11",
    "whitenoise>=6.11.0",
]
